# wgsl-rs

./: .gitignore  AGENTS.md  Cargo.toml  DEVLOG.md  LICENSE  README.md  SESSION.md  helloworld.wgsl  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/example/: Cargo.toml
crates/example/src/: examples.rs  main.rs
crates/fbm-example/: Cargo.toml
crates/fbm-example/src/: main.rs  shader.rs
crates/gpu-tests/: Cargo.toml
crates/gpu-tests/src/: lib.rs
crates/gpu-tests/tests/: derivative_comparison.rs
crates/roundtrip-tests/: Cargo.toml
crates/roundtrip-tests/src/: harness.rs  main.rs
crates/roundtrip-tests/src/shaders/: advanced_texture_operations.rs  atomic_operations.rs  basic_numeric.rs  bit_manipulation.rs  bitcast.rs  clamping.rs  derivative_operations.rs  exponential.rs  geometric.rs  logical_operations.rs  matrix_operations.rs  mod.rs  modf_frexp_ldexp.rs  packing.rs  rounding.rs  select_operations.rs  synchronization.rs  texture_operations.rs  trig.rs  type_conversions.rs  vector_arithmetic.rs
crates/wgsl-rs/: Cargo.toml
crates/wgsl-rs-ir/: Cargo.toml
crates/wgsl-rs-ir/src/: lib.rs  mangle.rs  render.rs  substitute.rs  types.rs
crates/wgsl-rs-ir/src/render/: builtin_lookup.rs
crates/wgsl-rs-ir/tests/: smoke.rs
crates/wgsl-rs-layout/: Cargo.toml
crates/wgsl-rs-layout-macros/: Cargo.toml
crates/wgsl-rs-layout-macros/src/: lib.rs
crates/wgsl-rs-layout/examples/: doc_diagrams.rs
crates/wgsl-rs-layout/src/: field.rs  lib.rs  types.rs
crates/wgsl-rs-layout/src/diagrams/: mod.rs  svg.rs
crates/wgsl-rs-layout/tests/: diagrams.rs
crates/wgsl-rs-macros/: Cargo.toml  build.rs
crates/wgsl-rs-macros/src/: builder.rs  builtins.rs  code_gen.rs  formatter.rs  ir_convert.rs  ir_emit.rs  lib.rs  linkage.rs  monomorphize.rs  parse.rs  parse_visitor.rs  ptr.rs  sampler.rs  storage.rs  swizzle.rs  texture.rs  uniform.rs  workgroup.rs
crates/wgsl-rs-macros/src/code_gen/: formatter.rs
crates/wgsl-rs/src/: extension.rs  lib.rs  linkage.rs  std.rs
crates/wgsl-rs/src/linkage/: mod.rs  wgpu.rs
crates/wgsl-rs/src/std/: atomic.rs  bitcast.rs  derivative.rs  matrices.rs  matrix.rs  numeric.rs  numeric_builtin_functions.rs  packing.rs  runtime.rs  synchronization.rs  texture.rs  vector.rs  vectors.rs
crates/wgsl-rs/src/std/numeric/: bit_manipulation.rs
crates/wgsl-rs/src/std/texture/: builtins.rs
crates/wgsl-rs/tests/: generic_linkage_specialization.rs  linkage_wgpu.rs  multiple_import_resolution.rs  trybuild.rs
crates/wgsl-rs/tests/ui/fail/: extensions_not_impl.rs  extensions_not_impl.stderr  linkage_access_in_const.rs  linkage_access_in_const.stderr
crates/wgsl-rs/tests/ui/pass/: extensions_basic.rs  mixed_local_and_cross_module_generics.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: ci.rs  help.rs  main.rs  wgsl_spec.rs
plans/: 2026-02-20-derivative-builtins.md  2026-02-20-dispatch-runtime.md
