[workspace]
members = [
  "crates/example",
  "crates/wgsl-rs",
  "crates/wgsl-rs-macros"
]

resolver = "2"

[workspace.dependencies]
glam = "0.30.9"
itertools = "0.14.0"
naga = { version = "27.0.3", features = ["wgsl-in", "wgsl-out"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
snafu = "0.8.9"
syn = { version = "2.0", features = ["full", "printing", "extra-traits"] }
