[package]
name = "wgsl-rs-macros"
version = "0.1.0"
edition = "2024"

[features]
default = ["validation", "linkage"]
validation = ["dep:naga"]
linkage = []

[lib]
proc-macro = true
bench = false

[dependencies]
itertools.workspace = true
naga = { workspace = true, optional = true }
proc-macro2.workspace = true
snafu.workspace = true
syn.workspace = true
quote.workspace = true
