[package]
name = "wgsl-rs-macros"
version = "0.1.0"
edition = "2024"

[features]
default = []
linkage-wgpu = []

[lib]
proc-macro = true
bench = false

[dependencies]
itertools.workspace = true
proc-macro2.workspace = true
snafu.workspace = true
syn.workspace = true
quote.workspace = true
wgsl-rs-ir = { path = "../wgsl-rs-ir" }
